--- a/app/views/avatars/edit.html.erb
+++ b/app/views/avatars/edit.html.erb
@@ -1,21 +1,4 @@
 <div class="avatar-edit-bg">
-<div class="block-color">
-<h3>Update Your Avatar</h3>
-</div>
-<p class="mt-3">Select a category to change your avatar</p>
-<div>
-<%# name of user needs to be implemented here %>
-<%# pen icon should link to updating name (pop-up?)%>
-<h3 id="header">Edit Name <i class="fa-solid fa-pencil"></i></h3>
-</div>
- <div class="container d-flex justify-content-center avatar-edit">
-      <%= cl_image_tag @user.avatar.skin_color.photo.key, :class => 'avatar-skin-color-op', :style => 'width: 70%;'%>
-      <%= cl_image_tag @user.avatar.hair.photo.key, :class => 'avatar-hair-op', :style => 'width: 70%;'%>
-      <%= image_tag "expressions/Avatar_expression_happy.png", :class => 'avatar-expression-op', :style => 'width: 70%;' %>
-      <%= cl_image_tag @user.avatar.pants.photo.key, :class => 'avatar-pants-op', :style => 'width: 70%;'%>
-      <%= cl_image_tag @user.avatar.shirt.photo.key, :class => 'avatar-shirt-op', :style => 'width: 70%;' %>
-      <%= cl_image_tag @user.avatar.shoes.photo.key, :class => 'avatar-shoes-op', :style => 'width: 70%;'%>
-
   <div class="block-color">
     <h3>Update Your Avatar</h3>
   </div>
@@ -31,6 +14,7 @@
   <%= render "avatars/name_modal" %>
   <div class="container d-flex justify-content-center avatar-edit">
     <%= cl_image_tag @user.avatar.skin_color.photo.key, :class => 'avatar-skin-color-op', :style => 'width: 70%;'%>
+    <div class="avatar-expression-op"> <%= render "pages/expression" %> </div>
     <%= cl_image_tag @user.avatar.hair.photo.key, :class => 'avatar-hair-op', :style => 'width: 70%;'%>
     <%= cl_image_tag @user.avatar.pants.photo.key, :class => 'avatar-pants-op', :style => 'width: 70%;'%>
     <%= cl_image_tag @user.avatar.shirt.photo.key, :class => 'avatar-shirt-op', :style => 'width: 70%;' %>
