--- a/app/views/pages/_homepage.html.erb
+++ b/app/views/pages/_homepage.html.erb
@@ -22,9 +22,24 @@
 </div>
 <%= render "/submissions/questions" %>
 <div class="container d-flex justify-content-center mt-5">
-  <div class="avatar-card">
+
+  <div class="avatar-card" data-controller="expressions" data-expressions-goal-value="<%= params[:goal] %>" data-expressions-url-value="<%= params[:expression_url] %>">
     <%= cl_image_tag @user.avatar.skin_color.photo.key, :class => 'avatar-skin-color'%>
-    <%= image_tag "expressions/Avatar_expression_happy.png", :class => 'avatar-expression' %>
+    <div class="facial-expression-submission show">
+      <%= cl_image_tag current_user.avatar.expression.photo.key, :class => 'avatar-expression', data: {expressions_target: "photo"}%>
+    </div>
+
+
+    <div class="facial-expression-regular hide" data-expressions-target="container">
+      <% if @hp_bar_level < 40 %>
+        <% current_user.avatar.update(expression: Part.where(name: "expression tired").last)%>
+      <% elsif @hp_bar_level < 80 %>
+        <% current_user.avatar.update(expression: Part.where(name: "expression default").last)%>
+      <% else %>
+        <% current_user.avatar.update(expression: Part.where(name: "expression happy").last)%>
+      <% end %>
+      <%= cl_image_tag current_user.avatar.expression.photo.key, :class => 'avatar-expression' %>
+    </div>
     <%= cl_image_tag @user.avatar.hair.photo.key , :class => 'avatar-hair'%>
     <%= cl_image_tag @user.avatar.pants.photo.key, :class => 'avatar-pants'%>
     <%= cl_image_tag @user.avatar.shirt.photo.key, :class => 'avatar-shirt' %>
