--- a/app/views/goals/dashboard.html.erb
+++ b/app/views/goals/dashboard.html.erb
@@ -43,7 +43,11 @@
   </div>
 </div>
 
-<h4 id="align-center">My Achievements</h4>
+<%= week_calendar(number_of_weeks: 1) do |date| %>
+  <%= date %>
+<% end %>
+
+<%# <h4 id="align-center">My Achievements</h4>
 <div class="container achievement-container mt-1">
   <div class="sub-achievement-grid">
     <div class="achievement-circle">
@@ -61,4 +65,4 @@
       <div class="achievement-circle" id="dashed">
     </div>
   </div>
-</div>
+</div> %>
