dashboard calendar and homepage layout updated

--- a/app/assets/stylesheets/components/_bar.scss
+++ b/app/assets/stylesheets/components/_bar.scss
@@ -40,7 +40,7 @@
 .hp-bar-dashboard-outline {
   height: 31px;
   width: 68%;
-  margin-left: 18%;
+  // margin-left: 18%;
 }
 
 .hp-bar-dashboard-inner {
