--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -23,6 +23,7 @@ label {
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
+ top: 25%;
  margin-top: 10px;
  box-shadow: 0px 2px 8px #A6E1DA;
   .button-yes {
@@ -48,4 +49,3 @@ label {
     color: white;
   }
 }
-
