--- a/app/views/goals/dashboard.html.erb
+++ b/app/views/goals/dashboard.html.erb
@@ -1,37 +1,37 @@
-<div class="block-color d-flex mb-4">
+<div class="block-color d-flex mb-1">
   <h3>Dashboard</h3>
 </div>
-<h4 id="align-center">My Health Points</h4>
+<p>My Health Points</p>
 <div class="hp-bar-frame">
 <%= render "pages/healthbar" %>
 </div>
 
-<div class="sub-calendar mb-3">
+<div class="sub-calendar mb-1">
   <div class="sub-days">
   </div>
+    <p>Today's Progress</p>
   <div class="sub-progress">
-    <h4>-Dates- Progress</h4>
-    <div class="sub-progress-card d-flex justify-content-center align-items-center" style = "<% if @food_percentage_today < 40 %><%= "background-color: #FFB5BE; border: 4px #FF6073 solid;" %><% elsif @food_percentage_today< 80 %><%= "background-color: #F6DE68; border: 4px #FF6073 solid;" %><% else %><%= "background-color: #A7E0DE; border: 4px #008C9B solid;" %><% end %>">
+    <div class="sub-progress-card" style = "<% if @food_percentage_today < 40 %><%= "background-color: #FFB5BE; border: 4px #FF6073 solid;" %><% elsif @food_percentage_today< 80 %><%= "background-color: #F6DE68; border: 4px #FF6073 solid;" %><% else %><%= "background-color: #A7E0DE; border: 4px #008C9B solid;" %><% end %>">
       <span id="icon">
-        <i class="fa-solid fa-burger" style="font-size: 2em; color: white;"></i>
+        <i class="fa-solid fa-burger" style="font-size: 2em; <% if @food_percentage_today < 40 %> <%= "color: #FF6073;"%><% elsif @food_percentage_today< 80 %><%="color: #FF6073"%><% else %><%="color: #008C9B"%><% end %>"></i>
       </span>
         <div class="hp-bar-dashboard-outline">
         <div class="hp-bar-inner" style="width: <%= @food_percentage_today%>%; <% if @food_percentage_today < 40 %><%= "background-color: #FF6073;" %><% elsif @food_percentage_today< 80 %><%= "background-color: #FFB5BE;" %><% else %><%= "background-color: #008C9B;" %><% end %>">
         </div>
         </div>
     </div>
-   <div class="sub-progress-card d-flex justify-content-center align-items-center" style = "<% if @food_percentage_today < 40 %><%= "background-color: #FF6073; border: 4px #FF6073 solid;" %><% elsif @food_percentage_today< 80 %><%= "background-color: #FDF5D0; 4px #FF6073 solid;" %><% else %><%= "background-color: #A7E0DE; border: 4px #008C9B solid;" %><% end %>">
+   <div class="sub-progress-card " style = "<% if @food_percentage_today < 40 %><%= "background-color: #FF6073; border: 4px #FF6073 solid;" %><% elsif @food_percentage_today< 80 %><%= "background-color: #FDF5D0; 4px #FF6073 solid;" %><% else %><%= "background-color: #A7E0DE; border: 4px #008C9B solid;" %><% end %>">
       <span id="icon">
-        <i class="fa-solid fa-moon" style="font-size: 2em; color: white;"></i>
+        <i class="fa-solid fa-moon" style="font-size: 2em; <% if @sleep_percentage_today < 40 %> <%= "color: #FF6073;"%><% elsif @sleep_percentage_today< 80 %><%="color: #FF6073"%><% else %><%="color: #008C9B"%><% end %>"></i>
       </span>
         <div class="hp-bar-dashboard-outline">
           <div class="hp-bar-inner" style="width: <%= @sleep_percentage_today%>%; <% if @sleep_percentage_today < 40 %><%= "background-color: #FFB5BE;" %><% elsif @sleep_percentage_today< 80 %><%= "background-color: #FFB5BE;" %><% else %><%= "background-color: #008C9B;" %><% end %>">
           </div>
         </div>
   </div>
-  <div class="sub-progress-card d-flex justify-content-center align-items-center" style = "<% if @exercise_percentage < 40 %><%= "background-color: #FFB5BE; border: 4px #FF6073 solid;" %><% elsif @exercise_percentage< 80 %><%= "background-color: #FDF5D0; border: 4px #F6DE68 solid;" %><% else %><%= "background-color: #A7E0DE; border: 4px #008C9B solid;" %><% end %>">
+  <div class="sub-progress-card" style = "<% if @exercise_percentage < 40 %><%= "background-color: #FFB5BE; border: 4px #FF6073 solid;" %><% elsif @exercise_percentage< 80 %><%= "background-color: #FDF5D0; border: 4px #F6DE68 solid;" %><% else %><%= "background-color: #A7E0DE; border: 4px #008C9B solid;" %><% end %>">
       <span id="icon">
-      <i class="fa-solid fa-dumbbell" style="font-size: 2em; color: white;"></i>
+        <i class="fa-solid fa-dumbbell" style="font-size: 2em; <% if @exercise_percentage  < 40 %> <%= "color: #FF6073;"%><% elsif @exercise_percentage < 80 %><%="color: #F6DE68"%><% else %><%="color: #008C9B"%><% end %>"></i>
       </span>
       <div class="hp-bar-dashboard-outline">
         <div class="hp-bar-inner" style= "width: <%= @exercise_percentage%>%;<% if @exercise_percentage < 40 %><%= "background-color: #FF6073;" %><% elsif @exercise_percentage< 80 %><%= "background-color: #F6DE68;" %><% else %><%= "background-color: #008C9B;" %><% end %>">
@@ -39,13 +39,35 @@
       </div>
   </div>
 </div>
+<div class="container">
+<%= week_calendar(number_of_weeks: 3) do |date| %>
+<%# iterate over the user goals %>
+<%# load the submissions for that date and goal %>
+
+<%# if current_user.sleep_percentage_for(date) < 40 %>
+<div class="calendar">
+<%if date <= Date.today && current_user.food_percentage_for(date) %>
+<h4><%= date.day %></h4>
+<div style="display: inline-grid;">
+<div class="calendar-card mb-1" style="background-<%= calendar_food_color(date) %>">
+<i class="fa-solid fa-burger" style="font-size: 1em; color: white;"></i>
+</div>
+<div class="calendar-card mb-1" style="background-<%= calendar_sleep_color(date)%>">
+<i class="fa-solid fa-moon" style="font-size: 1em; color: white;"></i>
+</div>
+<div class="calendar-card mb-1" style="background-<%= calendar_exercise_color(date)%>">
+<i class="fa-solid fa-dumbbell" style="font-size: 1em; color: white;"></i>
+</div>
+<% else %>
+<h4><%= date.day %></h4>
+<% end %>
+</div>
+<% end %>
+</div>
     </div>
   </div>
 </div>
 
-<%= week_calendar(number_of_weeks: 1) do |date| %>
-  <%= date %>
-<% end %>
 
 <%# <h4 id="align-center">My Achievements</h4>
 <div class="container achievement-container mt-1">
