--- a/app/assets/stylesheets/components/_calendar.scss
+++ b/app/assets/stylesheets/components/_calendar.scss
@@ -1,5 +1,19 @@
 .simple-calendar {
-  .day {}
+  border: 3px solid #38C6C2;
+  border-radius: 10px;
+  margin-top: 15px;
+
+  .day {
+    border: none;
+    background-color: white;
+    color: #008C9B;
+  }
+
+  .table{
+    margin-bottom: 2px;
+    border-radius: 10px;
+    background-color: white;
+  }
 
   .wday-0 {}
   .wday-1 {}
@@ -9,7 +23,9 @@
   .wday-5 {}
   .wday-6 {}
 
-  .today {}
+  .today {
+    background-color: #FDF5D0;
+  }
   .past {}
   .future {}
 
@@ -17,7 +33,32 @@
 
   .prev-month {}
   .next-month { }
-  .current-month {}
+  .current-month {
+  }
 
   .has-events {}
+
+  a {
+    text-decoration: none;
+    color: white;
+    background-color: #38C6C2;
+    padding-left: 8px;
+    padding-right: 8px;
+    border-radius: 3px;
+  }
+}
+
+.calendar {
+  display: flex;
+  flex-direction: column;
+}
+
+.calendar-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 20px;
+  border-radius: 5px;
 }
