--- a/app/assets/stylesheets/components/_dashboard.scss
+++ b/app/assets/stylesheets/components/_dashboard.scss
@@ -1,27 +1,26 @@
 .sub-progress {
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  justify-items: center;
+  gap: 10px;
+  margin-top: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.sub-progress-card {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 10px;
-  margin-top: 30px;
-}
-
-.sub-progress-card {
-  width: 300px;
-  height: 60px;
+  width: 100px;
+  height: 100px;
   border-radius: 5px;
   // border: 4px solid #38C6C2;
-  padding-left: 10px;
     #icon {
-      position: fixed;
-      left: 20%;
-    }
-    #sleep {
-      left: 25%;
-    }
-    #food {
-      left: 25%;
+      margin-bottom: 5px;
     }
 }
 
