--- a/app/views/avatars/_purchase_form.html.erb
+++ b/app/views/avatars/_purchase_form.html.erb
@@ -1,16 +1,16 @@
-<%= category %>
 <%= simple_form_for @avatar do |f| %>
   <fieldset>
     <div class="radio">
-      <% Part.where(category: category).each do |part| %>
+      <% Part.where.not(name: @avatar.purchased_parts).where.not(price: 0).where(category: category).each do |part| %>
         <%= f.label "#{category}_id_#{part.id}" do %>
           <%= hidden_field_tag 'name', 'purchased_parts' %>
           <%= f.radio_button "#{category}_id", part.id, class: "image-radio" %>
           <%= cl_image_tag part.photo.key, height: 200 %>
-          <%= part.price %>
+          <%= "$#{part.price}" %>
         <% end %>
       <% end %>
     </div>
   </fieldset>
   <%= f.submit 'Purchase', class: 'btn btn-primary' %>
 <% end %>
+
