--- a/app/views/avatars/shop.html.erb
+++ b/app/views/avatars/shop.html.erb
@@ -6,14 +6,14 @@
   <div class="point-bar">
     <%= image_tag 'coins/coin.png', class: "coin-icon"%>
     <%# placeholder text below, can interpolate %>
-    <p>1000</p>
+    <p><%= current_user.avatar.coins %></p>
   </div>
 </div>
 <div class="shop-grid mt-5">
   <% @categories.each do |category| %>
     <div class="shop-card-option">
       <button type="button" class="btn bg-transparent" style="width: 100%; height: 100%" data-bs-toggle="modal" data-bs-target="#category-option-<%= category%>" >
-        <p><%= category %></p>
+        <p><%= category.capitalize %></p>
       </button>
       <%= render "avatars/purchase_modal", category: category %>
     </div>
