--- a/app/views/pages/_homepage.html.erb
+++ b/app/views/pages/_homepage.html.erb
@@ -27,6 +27,7 @@
 <div class="container d-flex justify-content-center mt-5">
   <div class="avatar-card">
     <%= cl_image_tag @user.avatar.skin_color.photo.key, :class => 'avatar-skin-color'%>
+    <%= cl_image_tag @user.avatar.accessories.photo.key , :class => 'avatar-accessories'%>
     <%= cl_image_tag @user.avatar.hair.photo.key , :class => 'avatar-hair'%>
     <%= cl_image_tag @user.avatar.pants.photo.key, :class => 'avatar-pants'%>
     <%= cl_image_tag @user.avatar.shirt.photo.key, :class => 'avatar-shirt' %>
