calendar working better

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -14,7 +14,7 @@
 /* Place the navbar at the bottom of the page, and make it stick */
 .navbar {
   background-color: #38C6C2;
-  justify-content: space-around;
+  justify-content: space-evenly;
   overflow: hidden;
   position: fixed;
   bottom: 0;
