--- a/app/views/goals/dashboard.html.erb
+++ b/app/views/goals/dashboard.html.erb
@@ -11,36 +11,36 @@
   </div>
     <p>Today's Progress</p>
   <div class="sub-progress">
-    <div class="sub-progress-card" style = "<% if @food_percentage_today < 40 %><%= "background-color: #FFB5BE; border: 4px #FF6073 solid;" %><% elsif @food_percentage_today< 80 %><%= "background-color: #F6DE68; border: 4px #FF6073 solid;" %><% else %><%= "background-color: #A7E0DE; border: 4px #008C9B solid;" %><% end %>">
+    <div class="sub-progress-card" style = "<%= food_background_border_color(Date.today) %>">
       <span id="icon">
-        <i class="fa-solid fa-burger" style="font-size: 2em; <% if @food_percentage_today < 40 %> <%= "color: #FF6073;"%><% elsif @food_percentage_today< 80 %><%="color: #FF6073"%><% else %><%="color: #008C9B"%><% end %>"></i>
+        <i class="fa-solid fa-burger" style="font-size: 2em; <%= food_percentage_color_dark(Date.today) %>"></i>
       </span>
         <div class="hp-bar-dashboard-outline">
-        <div class="hp-bar-inner" style="width: <%= @food_percentage_today%>%; <% if @food_percentage_today < 40 %><%= "background-color: #FF6073;" %><% elsif @food_percentage_today< 80 %><%= "background-color: #FFB5BE;" %><% else %><%= "background-color: #008C9B;" %><% end %>">
+        <div class="hp-bar-inner" style="width: <%= current_user.food_percentage_for(Date.today)%>%; background-<%= food_percentage_color_dark(Date.today)%> ">
         </div>
         </div>
     </div>
-   <div class="sub-progress-card " style = "<% if @food_percentage_today < 40 %><%= "background-color: #FF6073; border: 4px #FF6073 solid;" %><% elsif @food_percentage_today< 80 %><%= "background-color: #FDF5D0; 4px #FF6073 solid;" %><% else %><%= "background-color: #A7E0DE; border: 4px #008C9B solid;" %><% end %>">
+   <div class="sub-progress-card " style = "<%= sleep_background_border_color(Date.today)%>">
       <span id="icon">
-        <i class="fa-solid fa-moon" style="font-size: 2em; <% if @sleep_percentage_today < 40 %> <%= "color: #FF6073;"%><% elsif @sleep_percentage_today< 80 %><%="color: #FF6073"%><% else %><%="color: #008C9B"%><% end %>"></i>
+        <i class="fa-solid fa-moon" style="font-size: 2em; <%= sleep_percentage_color_dark(Date.today) %>"></i>
       </span>
         <div class="hp-bar-dashboard-outline">
-          <div class="hp-bar-inner" style="width: <%= @sleep_percentage_today%>%; <% if @sleep_percentage_today < 40 %><%= "background-color: #FFB5BE;" %><% elsif @sleep_percentage_today< 80 %><%= "background-color: #FFB5BE;" %><% else %><%= "background-color: #008C9B;" %><% end %>">
+          <div class="hp-bar-inner" style="width: <%= current_user.sleep_percentage_for(Date.today)%>%; background-<%= sleep_percentage_color_dark(Date.today) %>">
           </div>
         </div>
   </div>
-  <div class="sub-progress-card" style = "<% if @exercise_percentage < 40 %><%= "background-color: #FFB5BE; border: 4px #FF6073 solid;" %><% elsif @exercise_percentage< 80 %><%= "background-color: #FDF5D0; border: 4px #F6DE68 solid;" %><% else %><%= "background-color: #A7E0DE; border: 4px #008C9B solid;" %><% end %>">
+  <div class="sub-progress-card" style = "<%=exercise_background_border_color(Date.today)%>">
       <span id="icon">
-        <i class="fa-solid fa-dumbbell" style="font-size: 2em; <% if @exercise_percentage  < 40 %> <%= "color: #FF6073;"%><% elsif @exercise_percentage < 80 %><%="color: #F6DE68"%><% else %><%="color: #008C9B"%><% end %>"></i>
+        <i class="fa-solid fa-dumbbell" style="font-size: 2em; <%= exercise_percentage_color_dark(Date.today)%>"></i>
       </span>
       <div class="hp-bar-dashboard-outline">
-        <div class="hp-bar-inner" style= "width: <%= @exercise_percentage%>%;<% if @exercise_percentage < 40 %><%= "background-color: #FF6073;" %><% elsif @exercise_percentage< 80 %><%= "background-color: #F6DE68;" %><% else %><%= "background-color: #008C9B;" %><% end %>">
+        <div class="hp-bar-inner" style= "width: <%= @exercise_percentage%>%; background-<%= exercise_percentage_color_dark(Date.today) %>">
         </div>
       </div>
   </div>
 </div>
 <div class="container">
-<%= week_calendar(number_of_weeks: 3) do |date| %>
+<%= month_calendar do |date| %>
 <%# iterate over the user goals %>
 <%# load the submissions for that date and goal %>
 
@@ -49,13 +49,13 @@
 <%if date <= Date.today && current_user.food_percentage_for(date) %>
 <h4><%= date.day %></h4>
 <div style="display: inline-grid;">
-<div class="calendar-card mb-1" style="background-<%= calendar_food_color(date) %>">
+<div class="calendar-card mb-1" style="background-<%= food_percentage_color_dark(date) %>">
 <i class="fa-solid fa-burger" style="font-size: 1em; color: white;"></i>
 </div>
-<div class="calendar-card mb-1" style="background-<%= calendar_sleep_color(date)%>">
+<div class="calendar-card mb-1" style="background-<%= sleep_percentage_color_dark(date)%>">
 <i class="fa-solid fa-moon" style="font-size: 1em; color: white;"></i>
 </div>
-<div class="calendar-card mb-1" style="background-<%= calendar_exercise_color(date)%>">
+<div class="calendar-card mb-1" style="background-<%= exercise_daily_percentage_color(date)%>">
 <i class="fa-solid fa-dumbbell" style="font-size: 1em; color: white;"></i>
 </div>
 <% else %>
