--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -97,7 +97,8 @@
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  bottom: -5%;
+  bottom: 1%;
+  z-index: 99;
 }
 
 .avatar-shoes-op {
