--- a/app/views/pages/_homepage.html.erb
+++ b/app/views/pages/_homepage.html.erb
@@ -24,7 +24,6 @@
   </div>
 </div>
 <%= render "/submissions/questions" %>
-
 <div class="routine-icons container mt-3">
   <%# Food goals based on daily goals %>
   <div class="progress-circle-food" style="background:
@@ -48,24 +47,14 @@
     </div>
   </div>
 </div>
-
 <div class="container d-flex justify-content-center mt-5">
-
   <div class="avatar-card" data-controller="expressions" data-expressions-goal-value="<%= params[:goal] %>" data-expressions-url-value="<%= params[:expression_url] %>">
     <%= cl_image_tag @user.avatar.skin_color.photo.key, :class => 'avatar-skin-color'%>
     <div class="facial-expression-submission show">
       <%= cl_image_tag current_user.avatar.expression.photo.key, :class => 'avatar-expression', data: {expressions_target: "photo"}%>
     </div>
-
-
     <div class="facial-expression-regular hide" data-expressions-target="container">
-      <% if @hp_bar_level < 40 %>
-        <% current_user.avatar.update(expression: Part.where(name: "expression tired").last)%>
-      <% elsif @hp_bar_level < 80 %>
-        <% current_user.avatar.update(expression: Part.where(name: "expression default").last)%>
-      <% else %>
-        <% current_user.avatar.update(expression: Part.where(name: "expression happy").last)%>
-      <% end %>
+      <%= render "pages/expression" %>
       <%= cl_image_tag current_user.avatar.expression.photo.key, :class => 'avatar-expression' %>
     </div>
     <%= cl_image_tag @user.avatar.hair.photo.key , :class => 'avatar-hair'%>
@@ -77,14 +66,3 @@
   </div>
 </div>
 <div class="routine-icons container mt-1">
-<div class="container d-flex justify-content-center mt-5">
-  <div class="avatar-card">
-    <%= cl_image_tag @user.avatar.skin_color.photo.key, :class => 'avatar-skin-color'%>
-    <%= cl_image_tag @user.avatar.hair.photo.key , :class => 'avatar-hair'%>
-    <%= cl_image_tag @user.avatar.pants.photo.key, :class => 'avatar-pants'%>
-    <%= cl_image_tag @user.avatar.shirt.photo.key, :class => 'avatar-shirt' %>
-    <%= cl_image_tag @user.avatar.shoes.photo.key, :class => 'avatar-shoes'%>
-  </div>
-  <div class="speech-bubble">
-  </div>
-</div>
