--- a/app/assets/stylesheets/components/_font.scss
+++ b/app/assets/stylesheets/components/_font.scss
@@ -39,6 +39,16 @@ p {
   text-align: center;
 }
 
+#dashboard-headers {
+  font-family: "Poppins", sans-serif;
+  font-weight: 200;
+  font-style: normal;
+  font-size: 16px;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+}
+
 .text-container {
   display: flex;
   justify-content: center;
