--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -56,23 +56,30 @@
 }
 
 .avatar-grid {
-  display: flex;
+  display: grid;
   flex-wrap: wrap;
-  flex-direction: row;
+  flex-direction: column;
+  position: relative;
+  top: -73px;
+  left: 70px;
   background-color: #FDF5D0;
   border: 4px solid #EFB622;
   border-radius: 15px;
-  height: 100px;
+  height: 190px;
+  width: 270px;
   justify-content: center;
+  justify-items: center;
+  grid-template-columns: 1fr 1fr 1fr;
   align-items: center;
   gap: 5px;
 }
 
 .avatar-option-card {
-  height: 60px;
-  width: 60px;
+  height: 70px;
+  width: 70px;
   background-color: white;
   border-radius: 10px;
+  border: 4px solid #EFB622;
   gap: 5px;
     .img-card {
       overflow: hidden;
@@ -89,7 +96,7 @@
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  bottom: -5%;
+  bottom: 5%;
 }
 
 .avatar-expression-op {
@@ -97,7 +104,7 @@
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  bottom: 1%;
+  bottom: 11%;
   z-index: 99;
 }
 
@@ -106,7 +113,7 @@
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  bottom: -5%;
+  bottom: 5%;
 }
 
 .avatar-skin-color-op {
@@ -114,7 +121,7 @@
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  bottom: -5%;
+  bottom: 5%;
 }
 
 .avatar-pants-op {
@@ -122,7 +129,7 @@
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  bottom: -5%;
+  bottom: 5%;
 }
 
 .avatar-shirt-op {
@@ -130,7 +137,7 @@
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  bottom: -5%;
+  bottom: 5%;
 }
 
 .avatar-landing-full {
