--- a/app/views/avatars/edit.html.erb
+++ b/app/views/avatars/edit.html.erb
@@ -17,6 +17,7 @@
     <div class="avatar-expression-op">
       <%= cl_image_tag Part.find_by(name: "expression default").photo.key, :class => 'avatar-expression-op' %>
     </div>
+    <%= cl_image_tag @user.avatar.accessories.photo.key, :class => 'avatar-accessories-op', :style => 'width: 70%;'%>
     <%= cl_image_tag @user.avatar.hair.photo.key, :class => 'avatar-hair-op', :style => 'width: 70%;'%>
     <%= cl_image_tag @user.avatar.pants.photo.key, :class => 'avatar-pants-op', :style => 'width: 70%;'%>
     <%= cl_image_tag @user.avatar.shirt.photo.key, :class => 'avatar-shirt-op', :style => 'width: 70%;' %>
