--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -11,7 +11,7 @@
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  bottom: -8%;
+  bottom: -1%;
 }
 
 
@@ -20,8 +20,8 @@
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  bottom: -8%;
-  z-index: 99
+  z-index: 99;
+  bottom: -1%;
 }
 
 .avatar-expression {
@@ -29,7 +29,7 @@
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  bottom: -8%;
+  bottom: -1%;
 }
 
 .avatar-shoes {
@@ -37,7 +37,7 @@
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  bottom: -8%;
+  bottom: -1%;
 }
 
 .avatar-skin-color {
@@ -45,7 +45,7 @@
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  bottom: -8%;
+  bottom: -1%;
 }
 
 .avatar-pants {
@@ -53,7 +53,7 @@
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  bottom: -8%;
+  bottom: -1%;
 }
 
 .avatar-shirt {
@@ -61,7 +61,7 @@
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  bottom: -8%;
+  bottom: -1%;
 }
 
 .avatar-grid {
@@ -70,7 +70,7 @@
   flex-direction: column;
   position: relative;
   top: -73px;
-  left: 70px;
+  left: 76px;
   background-color: #FDF5D0;
   border: 4px solid #EFB622;
   border-radius: 15px;
@@ -106,16 +106,16 @@
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  bottom: 5%;
+  bottom: 15%;
 }
 
 
 .avatar-accessories-op {
   width: 80%;
   position: absolute;
-  left: 50%;
+  left: 218px;
   transform: translateX(-50%);
-  bottom: -5%;
+  bottom: 15%;
   z-index: 99
 }
 
@@ -124,7 +124,7 @@
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  bottom: 11%;
+  bottom: 65px;
   z-index: 99;
 
 }
@@ -134,7 +134,7 @@
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  bottom: 5%;
+  bottom: 15%;
 }
 
 .avatar-skin-color-op {
@@ -142,7 +142,7 @@
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  bottom: 5%;
+  bottom: 15%;
 }
 
 .avatar-pants-op {
@@ -150,7 +150,7 @@
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  bottom: 5%;
+  bottom: 15%;
 }
 
 .avatar-shirt-op {
@@ -158,7 +158,7 @@
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  bottom: 5%;
+  bottom: 15%;
 }
 
 .avatar-landing-full {
