--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -113,7 +113,7 @@
 .avatar-accessories-op {
   width: 80%;
   position: absolute;
-  left: 218px;
+  left: 50%;
   transform: translateX(-50%);
   bottom: 15%;
   z-index: 99
@@ -124,7 +124,7 @@
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  bottom: 65px;
+  bottom: 27.5%;
   z-index: 99;
 
 }
