--- a/app/assets/config/manifest.json.erb
+++ b/app/assets/config/manifest.json.erb
@@ -14,4 +14,6 @@
   }<%= "," unless (files.size - 1) == index %>
 <% end %>
 ]
+"scope_url": "https://care-key-3e477239e95c.herokuapp.com/",
+"start_url": "https://care-key-3e477239e95c.herokuapp.com/"
 }
