--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,8 +1,8 @@
 <% if user_signed_in? %>
     <div class="navbar d-flex container mt-2">
-      <%= link_to goals_path do %>
+      <%= link_to new_goal_path do %>
       <span style="font-size: 2em; color: white;">
-        <i class="fa-solid fa-clock-rotate-left"></i>
+        <i class="fa-solid fa-list-check"></i>
       </span>
       <%end%>
       <%= link_to edit_avatar_path(current_user.avatar.id) do %>
