--- a/app/views/goals/new.html.erb
+++ b/app/views/goals/new.html.erb
@@ -1,14 +1,14 @@
 <div class="block-color d-flex mb-1">
   <h3>Tasks</h3>
 </div>
-<%= render "task_form" %>
 <% if !@goals.empty? %>
   <ul class="list-group">
     <% @goals.each do |goal| %>
       <li class="list-group-item">
-        <input class="form-check-input me-1" type="checkbox" value="" id="<%= goal.name.gsub(" ", "-") %>">
-        <label class="form-check-label stretched-link" for="<%= goal.name.gsub(" ", "-") %>"><%= goal.name %></label>
-      </li>
+        <%= simple_form_for [goal, @submission] ,html: { data: { controller: "checkbox" } } do |f| %>
+          <%= f.input :achieved, as: :check_boxes, collection: [[goal.name, goal.id]], label: false, input_html: { class: "form-check-input me-1 checkbox", id: goal.name.gsub(" ", "-"), data: { target: "checkbox.checkbox" } } %>
+        </li>
+      <% end %>
     <% end %>
   </ul>
 <% else %>
