--- a/app/views/goals/dashboard.html.erb
+++ b/app/views/goals/dashboard.html.erb
@@ -68,7 +68,7 @@
 </div>
 
 
-<%# <h4 id="align-center">My Achievements</h4>
+ <h4 id="align-center">My Achievements</h4>
 <div class="container achievement-container mt-1">
   <div class="sub-achievement-grid">
     <div class="achievement-circle">
@@ -86,4 +86,4 @@
       <div class="achievement-circle" id="dashed">
     </div>
   </div>
-</div> %>
+</div> 
