--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>CareKey</title>
+    <%# <title>Care-Key Where self-care is the key to level up!</title> %>
+     <title><%= meta_title %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
+    <%# added meta tag %>
+    <meta name="description" content="<%= meta_description %>">
+
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
@@ -14,6 +18,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <%= render 'shared/ios_pwa_links' %>
     <link rel="manifest" href="<%= asset_path 'manifest.json' %>">
+    <%# added favicon %>
+    <link rel="icon" type="image/png" sizes="32x32" href="app/assets/images/icons/favicon-32x32.png">
   </head>
   <body>
     <%= render "shared/flashes" %>
