completed 404 and 500 pages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <%# <title>Care-Key Where self-care is the key to level up!</title> %>
-     <title><%= meta_title %></title>
+    <title>Care-Key Where self-care is the key to level up!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
-    <%# added meta tag %>
-    <meta name="description" content="<%= meta_description %>">
-
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
