--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -8,26 +8,26 @@ label {
 }
 
 .image-radio:checked + img {
-  border: 3px solid #38C6C2;
+  border: 3px solid #38c6c2;
   border-radius: 5px;
 }
 
 .submission-form {
- position: absolute;
- display: flex;
- background-color: #FDF5D0;
- z-index: 99;
- border-radius: 5px;
- padding: 10px;
- width: 250px;
- flex-wrap: wrap;
- justify-content: center;
- align-items: center;
- top: 25%;
- margin-top: 10px;
- box-shadow: 0px 2px 8px #A6E1DA;
+  position: absolute;
+  display: flex;
+  background-color: #fdf5d0;
+  z-index: 99;
+  border-radius: 5px;
+  padding: 10px;
+  width: 250px;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  top: 25%;
+  margin-top: 10px;
+  box-shadow: 0px 2px 8px #a6e1da;
   .button-yes {
-    background-color: #38C6C2;
+    background-color: #38c6c2;
     border: none;
     border-radius: 5px;
     margin-right: 10px;
@@ -39,7 +39,7 @@ label {
   }
 
   .button-no {
-    background-color: #38C6C2;
+    background-color: #38c6c2;
     border: none;
     border-radius: 5px;
     padding-left: 30px;
@@ -48,4 +48,48 @@ label {
     padding-bottom: 8px;
     color: white;
   }
+}
+
+.reminder-submission-form {
+  position: absolute;
+  display: flex;
+  background-color: #fdf5d0;
+  z-index: 99;
+  border-radius: 5px;
+  padding: 10px;
+  width: 290px;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  top: 25%;
+  margin-top: 10px;
+  box-shadow: 0px 2px 8px #a6e1da;
+
+  .clock {
+    width: 200px;
+  }
+
+  .button-yes {
+    background-color: #38c6c2;
+    border: none;
+    border-radius: 5px;
+    margin-right: 10px;
+    margin-left:10px;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    color: white;
+  }
+  .button-no {
+    background-color: #38c6c2;
+    border: none;
+    border-radius: 5px;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    color: white;
+  }
+
 }
