created a task/goal view and updated dashboard

--- a/app/views/avatars/edit.html.erb
+++ b/app/views/avatars/edit.html.erb
@@ -1,5 +1,10 @@
 <div class="avatar-edit-bg">
   <div class="block-color">
+  <%= link_to shop_path do %>
+    <div class="setting-icon" id="shop" style="font-size: 2em; color: white;">
+      <i class="fa-solid fa-bag-shopping"></i>
+    </div>
+  <%end%>
     <h3>Update Your Avatar</h3>
   </div>
   <p class="mt-3">Select a category to change your avatar</p>
