--- a/app/views/goals/_task_form.html.erb
+++ b/app/views/goals/_task_form.html.erb
@@ -1,4 +1,7 @@
+
+<div class="list-group task-container">
 <%= simple_form_for @goal do |f|%>
   <%= f.input :name %>
-  <%= f.submit  %>
+  <%= f.submit 'Add', class: 'btn btn-primary'   %>
 <% end %>
+</div>
