--- a/app/assets/stylesheets/components/_dashboard.scss
+++ b/app/assets/stylesheets/components/_dashboard.scss
@@ -57,3 +57,13 @@
   background-color: transparent;
   border: 3px dashed gray;
 }
+
+.goal-progress {
+  border: 3px solid #38C6C2;
+  border-radius: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
