--- a/app/assets/stylesheets/components/_font.scss
+++ b/app/assets/stylesheets/components/_font.scss
@@ -35,8 +35,9 @@ p {
   font-family: "Poppins", sans-serif;
   font-weight: 200;
   font-style: normal;
-  font-size: 16px;
+  // font-size: 16px;
   text-align: center;
+    margin-bottom: 0;
 }
 
 #dashboard-headers {
@@ -61,4 +62,9 @@ p {
 
 #align-center {
   text-align: center;
+}
+
+#align-left {
+  text-align: left;
+  padding-left: 17px;
 }
