--- a/app/assets/stylesheets/components/_progress.scss
+++ b/app/assets/stylesheets/components/_progress.scss
@@ -33,3 +33,22 @@
     radial-gradient(closest-side, white 79%, transparent 80% 100%),
     conic-gradient(#FF6073 30%, #FFB5BE 0);
 }
+
+
+.goal-bar-frame {
+  display: flex;
+  justify-content: center;
+}
+
+
+.goal-bar-outline {
+  border: 3px solid gray;
+  height: 20px;
+  width: 160px;
+  border-radius: 20px;
+}
+
+.goal-bar-inner {
+  height: 18px;
+  border-radius: 20px;
+}
