--- a/app/views/goals/dashboard.html.erb
+++ b/app/views/goals/dashboard.html.erb
@@ -68,7 +68,7 @@
 </div>
 
 
- <h4 id="align-center">My Achievements</h4>
+ <%# <h4 id="align-center">My Achievements</h4>
 <div class="container achievement-container mt-1">
   <div class="sub-achievement-grid">
     <div class="achievement-circle">
@@ -86,4 +86,14 @@
       <div class="achievement-circle" id="dashed">
     </div>
   </div>
-</div> 
+</div>  %>
+
+<h4 id="align-center">My Personal Goals</h4>
+<div class="goal-progress">
+<p id="align-left">name of goal</p>
+<div class="goal-bar-frame">
+<div class="goal-bar-outline">
+<div class="goal-bar-inner" style= "width: <%= current_user.food_percentage_for(Date.today)%>%; background-<%= food_percentage_color_dark(Date.today)%>"></div>
+</div>
+</div>
+</div>
