--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
   <body>
     <%= render "shared/flashes" %>
     <%= yield %>
+    <div class="space"></div>
     <%= render "shared/navbar" %>
   </body>
 </html>
