--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
     <link rel="manifest" href="<%= asset_path 'manifest.json' %>">
   </head>
   <body>
+    <%= render "popup" if @pop_up %>
     <%= render "shared/flashes" %>
     <%= yield %>
     <%= render "shared/navbar" %>
