--- a/app/assets/stylesheets/components/_popup.scss
+++ b/app/assets/stylesheets/components/_popup.scss
@@ -4,9 +4,9 @@
   top: 50%;
   left:50%;
   transform: translate(-50%, -50%);
-  width: 50vw;
+  width: 100vw;
   z-index: 999999;
-  background-color: white;
+  // background-color: white;
   img {
     width: 100%;
   }
