updated the task view and dashboard progress

--- a/app/assets/stylesheets/components/_font.scss
+++ b/app/assets/stylesheets/components/_font.scss
@@ -65,6 +65,11 @@ p {
 }
 
 #align-left {
-  text-align: left;
+  position: absolute;
   padding-left: 17px;
+}
+
+.dashbar-text {
+  position: relative;
+  left: 7px;
 }
