--- a/app/assets/stylesheets/components/_dashboard.scss
+++ b/app/assets/stylesheets/components/_dashboard.scss
@@ -63,7 +63,10 @@
   border-radius: 10px;
   margin-left: 10px;
   margin-right: 10px;
+  margin-top: 20px;
   display: flex;
   justify-content: space-around;
   align-items: center;
+  height: 55px;
+  position: relative;
 }
