--- a/app/views/goals/dashboard.html.erb
+++ b/app/views/goals/dashboard.html.erb
@@ -1,10 +1,6 @@
 <div class="block-color d-flex mb-1">
   <h3>Dashboard</h3>
 </div>
-<% @other_goals.each do |goal| %>
-  <%= goal.name %>
-  <%= goal.submissions.count %>
-<% end %>
 <h4 id="align-center">My Health Points</h4>
 <div class="hp-bar-frame">
   <%= render "pages/healthbar" %>
@@ -92,11 +88,13 @@
 </div>  %>
 
 <h4 id="align-center">My Personal Goals</h4>
+<% @other_goals.each do |goal| %>
 <div class="goal-progress">
-<p id="align-left">name of goal</p>
+<p id="align-left" class="dashbar-text"> <%= goal.name %></p>
 <div class="goal-bar-frame">
 <div class="goal-bar-outline">
-<div class="goal-bar-inner" style= "width: <%= current_user.food_percentage_for(Date.today)%>%; background-<%= food_percentage_color_dark(Date.today)%>"></div>
+<div class="goal-bar-inner" style= "width: <%= (goal.submissions.count * 100) / 7 %>%; background-color: #38C6C2;"></div>
 </div>
 </div>
 </div>
+<% end %>
