--- a/app/views/submissions/_submission_task_form.html.erb
+++ b/app/views/submissions/_submission_task_form.html.erb
@@ -1,29 +1,28 @@
 <% goals.each do |goal| %>
   <div class="list-group-item d-flex task-item" >
-      <% if  goal.name == "Food" %>
-        <% [true, true, true].zip(goal.submissions.first(3)).each do |(achieved_value, saved_submission)|%>
-          <% if saved_submission %>
-            <p>Done</p>
-          <% else %>
-          <label class="form-check-label stretched-link" for="<%= goal.name.gsub(" ", "-") %>"><%= goal.name %></label>
-            <%= simple_form_for [goal, Submission.new], html: {data: {action: "change->tasks#mark"}} do |f| %>
-              <%= f.input :achieved, input_html: { value: true } %>
-              <%= f.input :date, as: :hidden, input_html: { value: Date.today } %>
-              <i class="fa-solid fa-trash fa-lg"></i>
-            <% end %>
+    <% if  goal.name == "Food" %>
+      <% [true, true, true].zip(goal.submissions.first(3)).each do |(achieved_value, saved_submission)|%>
+        <% if saved_submission %>
+          <p>Done</p>
+        <% else %>
+          <label for="<%= goal.name.gsub(" ", "-") %>"><%= goal.name %></label>
+          <%= simple_form_for [goal, Submission.new], html: {data: {action: "change->tasks#mark"}} do |f| %>
+            <%= f.input :achieved, input_html: { value: true } %>
+            <%= f.input :date, as: :hidden, input_html: { value: Date.today } %>
+            <i class="fa-solid fa-trash fa-lg"></i>
           <% end %>
         <% end %>
-      <% elsif goal.submissions.any? %>
-        <p><%= goal.name %></p>
-      <% else %>
-            <label class="form-check-label stretched-link" for="<%= goal.name.gsub(" ", "-") %>"><%= goal.name %></label>
-        <%= simple_form_for [goal, Submission.new], html: {data: {action: "change->tasks#mark"}} do |f| %>
-          <%= f.input :achieved, input_html: { value: true } %>
-          <%= f.input :date, as: :hidden, input_html: { value: Date.today } %>
-          <i class="fa-solid fa-trash fa-lg"></i>
-        <% end %>
-        <p><%= goal.name %></p>
       <% end %>
-    </div>
+    <% elsif goal.submissions.any? %>
+      <p><%= goal.name %></p>
+    <% else %>
+      <label for="<%= goal.name.gsub(" ", "-") %>"><%= goal.name %></label>
+      <%= simple_form_for [goal, Submission.new], html: {data: {action: "change->tasks#mark"}} do |f| %>
+        <%= f.input :achieved, input_html: { value: true } %>
+        <%= f.input :date, as: :hidden, input_html: { value: Date.today } %>
+        <i class="fa-solid fa-trash fa-lg"></i>
+      <% end %>
+      <p><%= goal.name %></p>
+    <% end %>
   </div>
 <% end %>
