updated goal/task form view

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -49,3 +49,12 @@ label {
     color: white;
   }
 }
+
+.form-check {
+  input{
+    border: 3px solid #008C9B;
+    width: 30px;
+    height: 30px;
+    margin-bottom: 0;
+  }
+}
