--- a/app/assets/stylesheets/components/_task.scss
+++ b/app/assets/stylesheets/components/_task.scss
@@ -10,6 +10,9 @@
   border-radius: 15px;
   justify-content: space-between;
   align-items: center;
+  height: 70px;
+  display: flex;
+  justify-items: center;
 }
 
 .task-container {
