--- a/app/views/submissions/_sleep.html.erb
+++ b/app/views/submissions/_sleep.html.erb
@@ -1,9 +1,10 @@
 <% today = Date.today %>
 <% current_time = Time.now %>
-
 <%# Time for sleep prompt%>
 <% sleep_prompt_time = Time.new(today.year, today.month, today.day, 10, 0, 0) %>
-
-<% if @submission_sleep.nil? %>
+<% if  current_user.today_sleep_submission.present? && !current_user.today_sleep_submission.achieved && !current_user.today_sleep_submission.reminder %>
+  <%# <%= render "submissions/sleep_modal" %>
+  <%= render "submissions/reminder_form", goal: @goal_sleep, message: "Do you want to be reminded?" %>
+<% elsif @submission_sleep.nil? %>
   <%= render "submissions/form", goal: @goal_sleep, message: "Did you sleep #{@goal_sleep.duration} hrs?" %>
 <% end %>
